unpackaged/main/default/objects/Contract_Line__c/Contract_Line__c.object-meta.xml
<CustomObject>
    <label>Contract Line</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Lines Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>