unpackaged/main/default/objects/Contract_Line__c/fields/Clause_Approvers__c.field-meta.xml
<CustomField>
    <fullName>Clause_Approvers__c</fullName>
    <label>Clause Approvers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operation</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>