unpackaged/main/default/objects/Contract_Line__c/fields/Contract_Master__c.field-meta.xml
<CustomField>
    <fullName>Contract_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Master</label>
    <referenceTo>Contract_Master__c</referenceTo>
    <relationshipLabel>Contract Lines</relationshipLabel>
    <relationshipName>Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>