unpackaged/main/default/objects/Contract_Line__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>