unpackaged/main/default/objects/Contract_Line__c/fields/Referenced_Article__c.field-meta.xml
<CustomField>
    <fullName>Referenced_Article__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referenced Article</label>
    <referenceTo>Contract_Line__c</referenceTo>
    <relationshipLabel>Contract Referenced Articles</relationshipLabel>
    <relationshipName>Referenced_Articles</relationshipName>
    <type>Lookup</type>
</CustomField>